# trading_strategy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/notebooks/: eda.ipynb
src/trading_strategy/notebooks/: collect_data.ipynb  eda.ipynb
src/trading_strategy/utils/: get_features.py  price_transforms.py
tests/utils/: test_get_features.py
