[tool.poetry]
name = "trading-strategy"
version = "0.1.0"
description = ""
authors = ["Iuliia Fokina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
yfinance = "^0.2.65"
lxml = "^6.0.0"
matplotlib = "^3.10.5"
prophet = "^1.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.9"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
exclude = [".git", "venv"]
max-line-length = 88
